<resources>
    <string name="app_name">Lista</string>
    <string name="name">Name</string>
    <string name="dodaj">Dodaj</string>
    <string name="witaj">Witaj</string>
    <string name="to_jest_drugie_activity">To jest drugie activity</string>
    <string name="next">Next</string>
    <string name="nic">Nic nie bylo zapisane.</string>
    <string name="przejdz_do_listy">Przejdz do listy</string>
    <string name="opcje">Opcje</string>
    <string name="dalej">dalej</string>
    <string name="zmien_kolor_tekstu">Zmień kolor tekstu</string>
    <string name="zmien_czcionke">Zmień czcionkę</string>
    <string name="zmien1">Zmień</string>
    <string name="zmien2">Zmień</string>
    <string name="powieksz">Powiększ</string>
    <string name="pomniejsz">Pomniejsz</string>
    <string name="lista_zakup">Lista zakupów</string>
    <string name="produkt">Produkt</string>
    <string name="cena">Cena</string>
    <string name="ilosc">Ilość</string>
    <string name="zakupione">Zakupione</string>
    <string name="dodaj_usun">Dodaj/Usuń</string>
    <string name="zmien_kolor_tla">Zmień kolor tła</string>
    <string name="t2">produkt:</string>
    <string name="tcena">cena:</string>
    <string name="tilosc">ilość:</string>
    <string name="addbutton" />
    <string name="bought">Kupione</string>
    <string name="product">Produkt</string>
    <string name="price">Cena</string>
    <string name="amount">Ilość</string>
    <string name="add">Dodaj</string>
    <string name="delete_all">Usuń wszystko</string>
    <string name="update_product">Produkt</string>
    <string name="update_price">Cena</string>
    <string name="update_amount">Ilość</string>
    <string name="update_check">Kupione</string>
    <string name="update">Zmień</string>
    <string name="addproduct">com.example.lista.ADD_PRODUCT</string>
    <string name="channelID">channelp</string>
    <string name="channelName">Channel Product</string>
    <string name="wprowadz_e_mail">Wprowadz e-mail</string>
    <string name="wprowadz_haslo">Wprowadz hasło</string>
    <string name="zaloguj_zrejestruj">ZALOGUJ/ZREJESTRUJ</string>
    <string name="wejdz_bez_logowania">Wejdz bez logowania</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="przejdz_do_dzielonej_listy">Przejdz do dzielonej listy</string>
    <string name="dalejshared">Dalej</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="aby_modyfikowac_liste_zaloguj_sie">Aby modyfikować listę, zaloguj się</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">map</string>
    <string name="dodaj_do_ulubionych">Dodaj do ulubionych</string>
    <string name="shop">Sklep</string>
    <string name="add_place">Dodaj</string>
    <string name="store">Store</string>
    <string name="storechannelID">channelG</string>
    <string name="storechannelName">Channel Store</string>
    <string name="bt_store">StoreListbutton</string>
    <string name="przejdz_do_listy_sklepow">Przejdz do listy sklepów:</string>
    <string name="store_button">Store_button</string>
    <string name="ulubione">Ulubione</string>
    <string name="channelId">channelG</string>
    <string name="appwidget_text">Witaj</string>
    <string name="add_widget">Add widget</string>
    <string name="www">WWW</string>
    <string name="widgett1">Witaj</string>
    <string name="action1">com.example.lista.action1</string>
    <string name="zmien_obraz">Zmień obraz</string>
    <string name="ImageWidget">ImageWidget</string>
    <string name="playprev">prev</string>
    <string name="play">play</string>
    <string name="playnext">next</string>
    <string name="actionplay">com.example.lista.actionplay</string>
    <string name="actionprev">com.example.lista.actionprev</string>
    <string name="actionnext">com.example.lista.actionnext</string>
    <string name="widgetstop">widgetstop</string>
    <string name="actionstop">actionstop</string>
</resources>